--- a/flask/03-contactos/templates/index.html
+++ b/flask/03-contactos/templates/index.html
@@ -3,7 +3,7 @@
 <div>
   {% for contacto in contactos %}
   <img src="{{contacto.picture['large']}}" alt="" />
-  <p>{{contacto.name["first"]}}</p>
+  <p>{{contacto.name["first"]}} {{contacto.name["last"]}}</p>
   {% endfor %}
 </div>
 {% endblock %}
