--- a/flask/03-contactos/templates/layout.html
+++ b/flask/03-contactos/templates/layout.html
@@ -6,7 +6,19 @@
     <title>Contactos</title>
     <style>
       body {
+        font-family: monospace;
         background-color: #333;
+        color: #fff;
+      }
+      ul {
+        display: flex;
+        gap: 1rem;
+        list-style: none;
+        padding-left: 0;
+      }
+      a {
+        font-size: 1.5rem;
+        text-decoration: none;
         color: #fff;
       }
     </style>
