feat: implementar vista para stats

--- a/flask/03-contactos/templates/layout.html
+++ b/flask/03-contactos/templates/layout.html
@@ -28,6 +28,8 @@
       <ul>
         <li><a href="/">Inicio</a></li>
         <li><a href="/hombres">Hombres</a></li>
+        <li><a href="/mujeres">Mujeres</a></li>
+        <li><a href="/stats">Estadísticas</a></li>
       </ul>
     </nav>
 
