--- a/flask/05-insurance/templates/index.html
+++ b/flask/05-insurance/templates/index.html
@@ -13,6 +13,17 @@
     </style>
   </head>
   <body>
-    <h1>Prueba <b> insurance</b></h1>
+    <h1>Predicción de gatos médicos ⚕️💲</h1>
+    <form method="POST">
+      <label for="edad">Edad</label>
+      <input type="number" id="edad" name="edad" />
+      <button type="submit">Predecir</button>
+    </form>
+
+    {% if prediction %}
+    <h4>
+      El promedio de gastos para una persona de {{edad}} años es {{prediction}}
+    </h4>
+    {% endif %}
   </body>
 </html>
